--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format:prettify": "prettier './src/**/*' --ignore-path ./.gitignore --config ./.prettierrc.js --write",
     "lint:es": "eslint '**/*.{js,jsx,ts,tsx}' -f codeframe --ignore-path ./.eslintignore --fix --cache --cache-location 'node_modules/.cache/eslint/'",
     "lint:style": "stylelint '**/*.scss' --config ./.stylelintrc.js --cache --cache-location 'node_modules/.cache/stylelint/' --fix --custom-syntax postcss-less",
-    "test:service": "jest src --passWithNoTests --maxWorkers=50%"
+    "test:service": "jest src --passWithNoTests --maxWorkers=50%",
+"git:update": "sh ./git-util.sh gitUpdate"
   },
   "lint-staged": {
     "*.(tsx|html|css)": [
