--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "sass": "^1.45.1",
     "sass-loader": "^12.1.0",
     "single-spa-react": "^3.2.0",
-    "style-loader": "^3.2.1",
-    "webpack": "^5.70.0"
+    "style-loader": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
