--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "webpack --config config/webpack.prod.js",
     "serve": "serve build",
     "clean": "rm -rf build",
+    "clear": "rm -rf node_modules",
     "format:prettify": "prettier './src/**/*' --ignore-path ./.gitignore --config ./.prettierrc.js --write",
     "lint:es": "eslint '**/*.{js,jsx,ts,tsx}' -f codeframe --ignore-path ./.eslintignore --fix --cache --cache-location 'node_modules/.cache/eslint/'",
     "lint:style": "stylelint '**/*.scss' --config ./.stylelintrc.js --cache --cache-location 'node_modules/.cache/stylelint/' --fix --custom-syntax postcss-less",
