--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,3 +18,26 @@ jobs:
 
       - name: Run Tests
         run: yarn test:service
+        
+        
+  notify:
+    name: Discord Notification
+    runs-on: ubuntu-latest
+    needs: # make sure the notification is sent AFTER the jobs you want included have completed
+      - test
+    if: ${{ always() }} # You always want to be notified: success, failure, or cancelled
+
+    steps:
+      - name: Notify
+        uses: nobrayner/discord-webhook@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          discord-webhook: https://discord.com/api/webhooks/953749046571458570/mqCAU2BXunBssATe8pgIf50KjUri7DMndAOhsAdPMhpNcjCoeyX1MMRN2G-IuOfCL6gN
+          username: 'xotomicro'
+          title: '${{ github.workflow }}: {{STATUS}}'
+          description: '${{ github.event_name }} trigged this {{STATUS}}!'
+          include-details: 'true'
+          color-success: '#4287f5'
+          color-failure: 'eb4034'
+          color-cancelled: '0x42daf5'
+        
