--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,4 @@
-name: Automated Tests and Linting
+name: ci-cl
 
 on: [push]
 
@@ -21,7 +21,7 @@ jobs:
         
         
   notify:
-    name: Discord Notification
+    name: notify
     runs-on: ubuntu-latest
     needs: # make sure the notification is sent AFTER the jobs you want included have completed
       - test
