--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,19 +19,19 @@ jobs:
       - name: install packages
         run: yarn install
 
-      - name: Run Tests
+      - name: run tests
         run: yarn test:service
         
         
   notify:
     name: notify
     runs-on: ubuntu-latest
-    needs: # make sure the notification is sent AFTER the jobs you want included have completed
+    needs: 
       - test
-    if: ${{ always() }} # You always want to be notified: success, failure, or cancelled
+    if: ${{ always() }} 
 
     steps:
-      - name: Notify
+      - name: notify
         uses: nobrayner/discord-webhook@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
