--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:es": "eslint '**/*.{js,jsx,ts,tsx}' -f codeframe --ignore-path ./.eslintignore --fix --cache --cache-location 'node_modules/.cache/eslint/'",
     "lint:style": "stylelint '**/*.scss' --config ./.stylelintrc.js --cache --cache-location 'node_modules/.cache/stylelint/' --fix --custom-syntax postcss-less",
     "test:service": "jest src --passWithNoTests --maxWorkers=50%",
-    "update:internal_dependencies": "npx ncu @xotomicro/* -u",
+    "update:version_dependencies": "npx ncu @xotomicro/* -u",
     "git:update": "sh ./git-util.sh gitUpdate"
   },
   "lint-staged": {
@@ -28,9 +28,9 @@
   },
   "dependencies": {
     "@types/node": "^17.0.21",
-    "@xotomicro/common": "^0.0.6",
-    "@xotomicro/design": "0.0.5",
-    "@xotomicro/utility": "^0.0.14",
+    "@xotomicro/common": "^0.0.7",
+    "@xotomicro/design": "0.0.6",
+    "@xotomicro/utility": "^0.0.16",
     "css-loader": "^6.2.0",
     "husky": "^7.0.2",
     "identity-obj-proxy": "^3.0.0",
